--- a/client/style.css
+++ b/client/style.css
@@ -1,1 +1,30 @@
-/* Styles */
+#wrapper {
+	display: grid;
+	grid-template-columns: 1fr 1fr 3fr;
+	grid-gap: 10px;
+}
+
+#title {
+	background-color: #CCCCCC;
+	grid-column: 1 / span 3;
+	grid-row: 1;
+	margin: auto;
+}
+
+#navigation {
+	background-color: #CCFFFF;
+	grid-column: 1;
+	grid-row: 2;
+}
+
+#options {
+	background-color: #FFCCFF;
+	grid-column: 2;
+	grid-row: 2;
+}
+
+#visualization {
+	background-color: #FFFFCC;
+	grid-column: 3;
+	grid-row: 2;
+}
