--- a/client/style.css
+++ b/client/style.css
@@ -1,9 +1,25 @@
+/*:root {
+	--header-border: 2px solid black;
+	--header-border-thin: 1px solid black;
+}*/
+
+body {
+	margin: 0;
+}
+
 #wrapper {
 	display: grid;
 	grid-template-columns: 1fr 1fr 3fr;
-	grid-gap: 10px;
+	grid-template-rows: 100px 50px 1fr;
 	font-family: sans-serif;
 	font-size: 12pt;
+	height: calc(100vh - 40px);
+	padding: 10px;
+	grid-gap: 10px;
+}
+
+#wrapper > div {
+	box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.5);
 }
 
 #title, #navigation, #options, #visualization {
@@ -11,28 +27,62 @@
 }
 
 #title {
-	background-color: #CCCCCC;
+	background-color: hsl(0, 50%, 50%);
 	grid-column: 1 / span 3;
 	grid-row: 1;
-	margin: auto;
 }
 
-#navigation {
-	background-color: #CCFFFF;
-	grid-column: 1;
+#title h1 {
+	text-align: center;
+}
+
+.header {
+	background-color: hsl(0, 50%, 60%);
 	grid-row: 2;
+}
+
+.header h3 {
+	text-align: center;
+}
+/*
+#header-navigation {
+	border-top: var(--header-border-thin);
+	border-bottom: var(--header-border);
+	border-left: var(--header-border);
+	border-right: var(--header-border-thin);
+}
+
+#header-options {
+	border-top: var(--header-border-thin);
+	border-bottom: var(--header-border);
+	border-left: var(--header-border-thin);
+	border-right: var(--header-border-thin);
+}
+
+#header-visualization {
+	border-top: var(--header-border-thin);
+	border-bottom: var(--header-border);
+	border-left: var(--header-border-thin);
+	border-right: var(--header-border);
+}
+*/
+
+#navigation {
+	background-color: hsl(0, 50%, 85%);
+	grid-column: 1;
+	grid-row: 3;
 }
 
 #options {
-	background-color: #FFCCFF;
+	background-color: hsl(0, 50%, 85%);
 	grid-column: 2;
-	grid-row: 2;
+	grid-row: 3;
 }
 
 #visualization {
-	background-color: #FFFFCC;
+	background-color: hsl(0, 50%, 85%);
 	grid-column: 3;
-	grid-row: 2;
+	grid-row: 3;
 }
 
 #visualization > svg {
@@ -82,7 +132,7 @@
 }
 
 #head2head-movement td.active:hover {
-	background-color: aliceblue;
+	background-color: white;
 }
 
 /* Games */
